--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/style.css" />
         <title>ADD Manager</title>
     </head>
-    <body style="color: aqua;">
+    <body>
         <div id="root" class="app-container"></div>
     </body>
 </html>
