--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
         <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/style.css" />
-        <title>ADD Manager</title>
+        <title>Timesphere - Horasphere Inc.</title>
     </head>
     <body>
         <div id="root" class="app-container"></div>
