--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,9 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-        <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/style.css" />
         <title>Timesphere - Horasphere Inc.</title>
     </head>
-    <body>
-        <div id="root" class="app-container"></div>
+    <body >
+        <div id="root" style="overflow: hidden;"></div>
     </body>
 </html>
